user sign in & i express-session

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,5 +7,7 @@
   </head>
   <body>
     <h1>Welcome to the app!</h1>
+    <a href="/auth/sign-up">Sign up</a>
+    <a href="/auth/sign-in">Sign in</a>
   </body>
 </html>
