--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,13 +11,15 @@
     <p>
         <a href="/auth/sign-out">Sign out</a>
     </p>
-    
+
     <% } else { %>
     <h1>Welcome to the app, guest.</h1>
     <p>
     <a href="/auth/sign-up">Sign up</a> or <a href="/auth/sign-in">Sign in</a>
     </p>
-    
     <% } %>
+
+    <p><a href="/vip-lounge">Get into the VIP Users Only lounge!</a></p>
+
   </body>
 </html>
